recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.error
SplitHanoi2:24: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src dst2
      ^SplitHanoi2:25: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameters src, other, dst.
      hanoi (n - 1) dst1 src dst2
            ^SplitHanoi2:26: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src dst1
      ^SplitHanoi2:27: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameters src, other, dst.
      hanoi (n - 1) other src dst1
            ^